changed game's name and player appearance