@@ -1,3 +1,3 @@
 cd src
 javac -d ../bin main/App.java
-java --enable-preview -cp ../bin main/App
+java -cp ../bin main/App
